# DocBridge

./: README.md  pyproject.toml  requirements.txt  setup.py
docbridge/: __init__.py  cli.py  utils.py
docbridge/converters/: __init__.py  base.py  excel.py  powerpoint.py  word.py
docbridge/formatters/: __init__.py  ai_dialog.py  code.py  table.py
docbridge/styles/: __init__.py  default.py
examples/: sample.md  sample_output.docx  style_config.yaml
