[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docbridge"
version = "1.0.0"
description = "🚀 DocBridge - Convert Markdown to Office documents with AI dialog support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "DocBridge Team", email = "docbridge@example.com"}
]
keywords = [
    "markdown",
    "converter",
    "word",
    "excel",
    "powerpoint",
    "office",
    "ai",
    "chatgpt",
    "claude",
    "deepseek",
    "cli",
    "productivity"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
]
dependencies = [
    "python-docx>=0.8.11",
    "openpyxl>=3.0.10",
    "python-pptx>=0.6.21",
    "markdown>=3.4.0",
    "beautifulsoup4>=4.11.0",
    "pygments>=2.13.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "rich>=12.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.990",
]

[project.scripts]
docbridge = "docbridge.cli:main"
db = "docbridge.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/docbridge"
Documentation = "https://github.com/yourusername/docbridge#readme"
Repository = "https://github.com/yourusername/docbridge"
Issues = "https://github.com/yourusername/docbridge/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["docbridge*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
